--- a/.github/workflows/compile_meta_core.yml
+++ b/.github/workflows/compile_meta_core.yml
@@ -35,13 +35,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: MetaCubeX/Clash.Meta
-          ref: Alpha
+          ref: v1.15.0
       
       - name: Get Upstream Version
         id: upstream_id
         run: |
-          echo "upstream_id=alpha-g$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "upstream_id: alpha-g$(git rev-parse --short HEAD)"
+          echo "upstream_id=v1.15.0-g$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "upstream_id: v1.15.0-g$(git rev-parse --short HEAD)"
 
   Compile:
     runs-on: ubuntu-latest
